# sens-fusion-assignment-3

./: .gitignore  Analysis.ipynb  CMakeLists.txt  README.md  mkrun.sh
data/: load_all_data.sh
include/: my_conversions.h  my_icp.h  my_types.h  my_visualizations.hpp
src/: main.cpp  my_icp.cpp
